# mongo-replication

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
config/: staging-ca_scan_report.md  test_pii_report.md
docs/: IMPLEMENTATION_PLAN_POST_LOAD.md  MIGRATION_V2.md  configuration.md  post-load-transformations.md  presidio.md  technical-design.md  test-coverage.md
src/mongo_replication/: README.md  __init__.py
src/mongo_replication/cli/: __main__.py  main.py
src/mongo_replication/cli/commands/: __init__.py  init.py  run.py  scan.py
src/mongo_replication/cli/interactive/: selectors.py
src/mongo_replication/cli/reporters/: pii_report.py  progress.py  scan_report.py
src/mongo_replication/cli/reporters/templates/: scan_report.md.j2
src/mongo_replication/cli/utils/: cascade_tree.py  output.py  signal_handler.py
src/mongo_replication/config/: __init__.py  config_template.yaml.j2  defaults.yaml  loader.py  manager.py  models.py  presidio.yaml  presidio_config.py
src/mongo_replication/engine/: __init__.py  cascade_filter.py  connection.py  discovery.py  field_exclusion.py  indexes.py  jobs.py  orchestrator.py  relationships.py  replicator.py  state.py  transformations.py  validation.py
src/mongo_replication/engine/pii/: __init__.py  custom_operators.py  pii_analyzer.py  pii_handler.py  pii_redaction.py  presidio_analyzer.py  presidio_anonymizer.py  sampler.py
tests/: conftest.py
tests/unit/: test_cascade_replication.py  test_config_models.py  test_config_transformations.py  test_custom_operators.py  test_error_summarization.py  test_field_exclusion.py  test_indexes.py  test_jobs.py  test_load_tracking.py  test_match_filter.py  test_pii_handler.py  test_pii_redaction.py  test_presidio_analyzer.py  test_presidio_anonymizer.py  test_presidio_config.py  test_schema_relationship_analyzer.py  test_transformation_engine.py  test_transformations.py
tests/unit/cli/: test_init.py  test_scan.py
