[project]
name = "mongo-replication"
version = "1.0.2"
description = "Production-grade MongoDB replication tool with PII redaction, parallel processing, and state management"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Nicolas Huray", email = "nicolas.huray@gmail.com"}
]
keywords = ["mongodb", "replication", "etl", "pii", "data-pipeline", "incremental-loading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pymongo>=4.6.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
    "tqdm>=4.66.0",
    "tenacity>=9.0.0",
    "mimesis>=19.0.0",
    "jinja2>=3.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.0.4",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "mongomock>=4.0.0",
    "taskipy>=1.14.1",
    "build>=1.4.2",
    "twine>=6.2.0",
]

[project.scripts]
mongorep = "mongo_replication.cli.main:app"

[project.urls]
Homepage = "https://github.com/nhuray/mongo-replication"
Documentation = "https://github.com/nhuray/mongo-replication#readme"
Repository = "https://github.com/nhuray/mongo-replication"
Issues = "https://github.com/nhuray/mongo-replication/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mongo_replication"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=mongo_replication",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests (require MongoDB)",
]

[tool.coverage.run]
source = ["src/mongo_replication"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.taskipy.tasks]
format = "uv tool run ruff format"
check = "uv tool run ruff check --fix"
lint = "uv tool run ruff check --fix"
build = "uv run python -m build"
test = "uv run pytest"
publish = "uv run twine upload dist/*"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install build && python -m build"
commit_message = "chore(release): {version} [skip ci]"
commit_author = "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
